--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+	compile group: 'com.querydsl', name: 'querydsl-jpa'
+	compile group: 'com.querydsl', name: 'querydsl-apt'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -36,6 +38,20 @@ dependencies {
 	compile 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+}
+
+configure("querydsl-sample") {
+	apply plugin: "io.spring.dependency-management"
+	dependencies {
+		compile("com.querydsl:querydsl-core")
+		compile("com.querydsl:querydsl-jpa")
+		annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
+		annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+		annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+	}
+	clean {
+		delete file('src/main/generated')
+	}
 }
 
 test {
