--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+      use-new-id-generator-mappings: false
     properties:
       hibernate:
         show_sql: true
