--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+	implementation 'commons-io:commons-io:2.6'
 	compile group: 'com.querydsl', name: 'querydsl-jpa'
 	compile group: 'com.querydsl', name: 'querydsl-apt'
 	compileOnly 'org.projectlombok:lombok'
