--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,14 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    data: classpath*:db/data.sql
+    initialization-mode: always
+    sql-script-encoding: UTF-8
 
   jpa:
     hibernate:
       use-new-id-generator-mappings: false
-      ddl-auto: update
+      ddl-auto: create
 
     properties:
       hibernate:
