--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'commons-io:commons-io:2.6'
 	implementation 'org.webjars:bootstrap:3.3.7'
 	implementation 'org.webjars:jquery:3.1.1-1'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 	compile group: 'com.querydsl', name: 'querydsl-jpa'
 	compile group: 'com.querydsl', name: 'querydsl-apt'
