--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -5,6 +5,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL57Dialect
-          storage_engine: innodb
+          storage-engine:innodb
+
   session:
     store-type: jdbc
