--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL57Dialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
           storage-engine:innodb
 
   session:
