--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,11 +1,16 @@
 spring:
   profiles:
     include: ouath,real-db
+    active: local
   jpa:
-    properties:
+    properties: local
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
           storage-engine:innodb
-
+  datasource:
+    driverClassName: org.mariadb.jdbc.Driver
+    password: master1234
+    url: jdbc:mariadb://cucumberserver.cnfroc6abnee.ap-northeast-2.rds.amanonaws.com:3306/cucumbermarket
+    username: cucumber
   session:
     store-type: jdbc
