--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/console/
 
-spring.datasource.url=jdbc:h2:mem:cucumbertest
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://cucumberserver.cnfroc6abnee.ap-northeast-2.rds.amazonaws.com:3306/cucumbermarket
+spring.datasource.username=cucumber
+spring.datasource.password=master1234
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.data=classpath*:db/data.sql
 spring.datasource.initialization-mode=always
