build: fix application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,14 @@
 spring.main.allow-bean-definition-overriding=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/console/
-
-spring.datasource.url=jdbc:mariadb://cucumberserver.cnfroc6abnee.ap-northeast-2.rds.amazonaws.com:3306/cucumbermarket
-spring.datasource.username=cucumber
-spring.datasource.password=master1234
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.data=classpath*:db/data.sql
-spring.datasource.initialization-mode=always
-spring.datasource.sql-script-encoding=UTF-8
-
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://cucumberserver.cnfroc6abnee.ap-northeast-2.rds.amazonaws.com:3306/cucumbermarket
+spring.datasource.username=cucumber
+spring.datasource.password=master1234
+
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.logging.level.org.hibernate.SQL=debug
