--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'org.webjars:jquery:3.1.1-1'
 
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.1.RELEASE'
 
 	compile group: 'com.querydsl', name: 'querydsl-jpa'
 	compile group: 'com.querydsl', name: 'querydsl-apt'
