--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.logging.level.org.hibernate.SQL=debug
 spring.logging.level.org.hibernate.type=trace
 
+spring.profiles.include=aws,credentials
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.maxFileSize=10MB
 spring.servlet.multipart.maxRequestSize=10MB
